--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/vue-query": "^5.75.5",
+    "@types/node": "^22.15.17",
+    "axios": "^1.9.0",
+    "pinia": "^3.0.2",
+    "tailwindcss": "^4.1.5",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
