--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/vue-query": "^5.75.5",
     "@types/node": "^22.15.17",
     "axios": "^1.9.0",
+    "lodash": "^4.17.21",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
