--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@types/node": "^22.15.17",
     "axios": "^1.9.0",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "lucide-vue-next": "^0.509.0",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
