--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
